타이틀 bgm 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 Lucia/Plugins/
 !Lucia/Assets/
 !Lucia/Build/
-!Lucia/Metadata/
+Lucia/Metadata/
 !Lucia.fspro
-!Lucia/.cache/
+Lucia/.cache/
+Lucia/.unsaved/
 !Lucia/.user/
